# pico-midi-looper-ble

./: CMakeLists.txt  README.md  midi_service.gatt
.github/workflows/: build-firmware.yml  release.yml
docs/: architecture.md  getting-started-with-garageband.md  looper_fsm.dot
drivers/: ble_midi.c  button.c  display.c
include/: ble_midi.h  bootsel_button.h  btstack_config.h  button.h  looper.h  tap_tempo.h
include/drivers/: ble_midi.h  button.h  display.h
src/: ble_midi.c  bootsel_button.c  button.c  display.c  looper.c  main.c  main1.c  main2.c  main3.c  tap_tempo.c
